--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -4,15 +4,17 @@
             <div class="burger-menu">
                 <i class="fas fa-bars"></i>
             </div>
-            <h1>AGVSHAINK</h1>
+            <a href="/" style="text-decoration: none;">
+                <h1>AGVSHAINK</h1>
+            </a>
             <img src="" alt="">
         </div>
         <nav>
-            <ol>
-                <li><a href="/productCart">Productos</a></li>
-                <li><a href="/productDetail">Categorias</a></li>
-                <li><a href="/login">Ofertas</a></li>
-                <li><a href="/register">Contacto</a></li>
+            <ol class="ol">
+                <li><a href="/products/cart">Productos</a></li>
+                <li><a href="/products/detail">Categorias</a></li>
+                <li><a href="/users/login">Ofertas</a></li>
+                <li><a href="/users/register">Contacto</a></li>
             </ol>
         </nav>
         <div class="botones">
