--- a/site/public/css/footer.css
+++ b/site/public/css/footer.css
@@ -1,5 +1,5 @@
 footer{
-    background-color: var(--color-gris);
+    background-color: var(--color-4);
     color: #fff;
     text-align: center;
     padding-top: 10px;
