--- a/site/public/css/header.css
+++ b/site/public/css/header.css
@@ -1,5 +1,5 @@
 header{
-    background-color: var(--color-violeta);
+    background-color: var(--color-4);
 }
 
 header article{
@@ -21,6 +21,7 @@ header article .burger-menu{
 header article h1{
     display: inline;
     font-size: 22px;
+    color: #fff;
 }
 
 header article nav{
@@ -36,6 +37,11 @@ header article .botones div{
     border-left: 1px solid black;
     font-size: 22px;
     padding: 2px 5px 2px 10px;
+}
+
+.ol {
+    margin: 0px;
+    padding: 0px;
 }
 
 @media (min-width: 769px){
