--- a/site/public/css/register.css
+++ b/site/public/css/register.css
@@ -1,13 +1,13 @@
 .register{
     box-sizing: border-box;
-    background-color: var(--color-negro);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: var(--color-1);
+    font-family: "Poppins";
 }
 
 .register h2{
     text-transform: uppercase;
-    color: #fff;
-    border-bottom: 1px solid var(--color-lila);
+    color: #000;
+    border-bottom: 1px solid var(--color-4);
     padding: 10px;
 }
 
@@ -19,20 +19,20 @@
     align-items: center;
     margin: 20px 30px;
     padding: 10px;
-    background-color: var(--color-gris);
-    color: #fff;
-    border: 2px solid var(--color-lila);
-    box-shadow: 0px 0px 20px var(--color-gris);
+    background-color: var(--color-2);
+    color: #000;
+    border: 2px solid var(--color-4);
+    box-shadow: 0px 0px 20px #000;
 }
 .register main div h6{
-    color: #fff;
+    color: #000;
     text-transform: uppercase;
-    border-top: 1px solid var(--color-lila);
+    border-top: 1px solid var(--color-4);
     align-items: flex-start;
     padding-top: 5px;
 }
 .register main div p{
-    border-bottom: 1px solid var(--color-lila);
+    border-bottom: 1px solid var(--color-4);
     padding-bottom: 5px;
     font-size: 14px;
 }
@@ -40,8 +40,8 @@
     text-transform: uppercase;
 }
 .register main form span{
-    color: #fff;
-    border-bottom: 1px solid var(--color-lila);
+    color: #000;
+    border-bottom: 1px solid var(--color-4);
     padding-bottom: 5px;
     font-size: 12px;
 }
@@ -65,7 +65,7 @@
         justify-content: space-between;
     }
     .register article.insta h3{
-        color: #fff;
+        color: var(--color-4);
         text-align: center;
         text-transform: uppercase;
         padding-bottom: 15px;
@@ -75,8 +75,8 @@
         display: flex;
         justify-content: center;
         font-size: 70px;
-        color: #fff;
-        border-top: 1px solid var(--color-lila);
+        color: var(--color-4);
+        border-top: 1px solid var(--color-4);
         margin-top: 70px;
         padding: 20px;
     }
