--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -1,8 +1,9 @@
 @import url("general.css");
 @import url("header.css");
 @import url("footer.css");
-@import url("home.css");
+@import url("index.css");
 @import url("productDetail.css");
 @import url("productCart.css");
 @import url("register.css");
 @import url("login.css");
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
