--- a/site/src/views/products/productDetail.ejs
+++ b/site/src/views/products/productDetail.ejs
@@ -1,47 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AGVSHAINK</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="https://kit.fontawesome.com/b5b4548719.js" crossorigin="anonymous"></script>
+    <%- include('../partials/head') %>
 </head>
 <body class="productDetail">
     <header>
-        <article>
-            <div class="titulo">
-                <div class="burger-menu">
-                    <i class="fas fa-bars"></i>
-                </div>
-                <h1>AGVSHAINK</h1>
-                <img src="" alt="">
-            </div>
-            <nav>
-                <ol>
-                    <li><a href="">Productos</a></li>
-                    <li><a href="">Categorias</a></li>
-                    <li><a href="">Ofertas</a></li>
-                    <li><a href="">Contacto</a></li>
-                </ol>
-            </nav>
-            <div class="botones">
-                <div>
-                    <div class="barra-de-busqueda"><form action=""><input type="text" placeholder="Buscar productos"></form></div>
-                    <i class="fas fa-search"></i>
-                </div>
-                <div>
-                    <i class="fas fa-user"></i>      
-                </div>
-                <div>
-                    <i class="fas fa-shopping-bag"></i>  
-                </div>               
-            </div>
-        </article>
+        <%- include('../partials/header') %>
     </header>
     <main>
-        <h2>nombre del producto</h2>
+        <h2>Nombre del producto</h2>
             <article class="producto">
                 <div class="imagenes">
                     <img class="modelo1" src="/img/producto1.JPG" alt="">
@@ -143,27 +110,7 @@
         </article>
     </main>
     <footer>
-        <div>
-            <section>
-                <h4>horario</h4>
-                <p>lunes a viernes de 8:00 a 17:00</p>
-                <p>sabados de 8:00 a 12:00</p>
-            </section>
-            <section>
-                <h4>Seguinos</h4>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-facebook-f"></i>
-            </section>
-            <section>
-                <h4>contacto</h4>
-                <p>sucursal</p>
-                <p>telefono</p>
-                <p>venta online</p>
-                <p>Whatsapp</p>
-            </section>
-        </div>
-        <h5>AGVSHAINK@gmail.com</h5>
-        <p class="copyright">copyright</p>
+        <%- include('../partials/footer') %>
     </footer>
 </body>
 </html>
