--- a/site/src/views/users/register.ejs
+++ b/site/src/views/users/register.ejs
@@ -2,55 +2,20 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro</title>
+    <%- include('../partials/head') %>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="https://kit.fontawesome.com/76d25d6fff.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="register">
     <header>
-        <article>
-            <div class="titulo">
-                <div class="burger-menu">
-                    <i class="fas fa-bars"></i>
-                </div>
-                <h1>AGVSHAINK</h1>
-                <img src="" alt="">
-            </div>
-            <nav>
-                <ol>
-                    <li><a href="">Productos</a></li>
-                    <li><a href="">Categorias</a></li>
-                    <li><a href="">Ofertas</a></li>
-                    <li><a href="">Contacto</a></li>
-                </ol>
-            </nav>
-            <div class="botones">
-                <div>
-                    <div class="barra-de-busqueda">
-                        <form action=""><input type="text" placeholder="Buscar productos"></form>
-                    </div>
-                    <i class="fas fa-search"></i>
-                </div>
-                <div>
-                    <i class="fas fa-user"></i>
-                </div>
-                <div>
-                    <i class="fas fa-shopping-bag"></i>
-                </div>
-            </div>
-        </article>
+        <%- include('../partials/header') %>
     </header>
-    <h2>Ingreso de usuario</h2>
+    <h2 style="margin: 20px auto;">Ingreso de usuario</h2>
     <main>
         <h3>Crea tu cuenta</h3>
         <div>
             <h6>Datos de usuario</h6>
-            <p>Si ya estas registrado <a href="">clink aca</a></p>
+            <p>Si ya estas registrado <a href="">click aca</a></p>
         </div>
         <form>
             <div class="mb-3">
@@ -73,13 +38,13 @@
                 <label for="exampleInputPhoneNumber1" class="form-label">Número de telefono</label>
                 <input type="number" placeholder="15-12345678" class="form-control" id="exampleInputPhoneNumber1" aria-describedby="emailHelp">
               </div>
-            <div class="d-flex justify-content-end">
-                <div class="mb-3 form-check">
+            <div class="d-flex justify-content-end" style="flex-direction: column; align-items: center;">
+                <div class="mb-3 form-check"> 
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
                     <label class="form-check-label" for="exampleCheck1">Recordarme</label>
                   </div>
             </div>
-            <div><button type="submit" class="btn btn-primary">Registrate</button></div>
+            <div style="justify-content: center; flex-direction: column; align-items: center;"><button type="submit" class="btn btn-primary" style="margin: 0px auto; display: flex; justify-content: center; flex-direction: column; align-items: center;">Registrate</button></div>
           </form>
             
     </main>
@@ -100,27 +65,7 @@
         </article>
     </div>
     <footer>
-        <div>
-            <section>
-                <h4>Horario</h4>
-                <p>Lunes a Viernes de 8:00 a 17:00</p>
-                <p>Sabados de 8:00 a 12:00</p>
-            </section>
-            <section>
-                <h4>Seguinos</h4>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-facebook-f"></i>
-            </section>
-            <section>
-                <h4>Contacto</h4>
-                <p>Sucursal</p>
-                <p>Telefono</p>
-                <p>Venda online</p>
-                <p>Whatsapp</p>
-            </section>
-        </div>
-        <h5>AGVSHAINK@gmail.com</h5>
-        <p class="copyright">copyright</p>
+        <%- include('../partials/footer') %>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
