--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -4,6 +4,8 @@
 @import url("index.css");
 @import url("productDetail.css");
 @import url("productCart.css");
+@import url("productAdd.css");
+@import url("productEdit.css");
 @import url("register.css");
 @import url("login.css");
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
