--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -12,7 +12,7 @@
         <nav>
             <ol class="ol">
                 <li><a href="/products/cart">Productos</a></li>
-                <li><a href="/products/detail">Categorias</a></li>
+                <li><a href="/products/detail/1">Categorias</a></li>
                 <li><a href="/users/login">Ofertas</a></li>
                 <li><a href="/users/register">Contacto</a></li>
             </ol>
