--- a/site/src/views/products/productCart.ejs
+++ b/site/src/views/products/productCart.ejs
@@ -20,7 +20,7 @@
                 <article>
                     <h4>Producto</h4>
                     <div class="img-detalles">
-                        <img src="/img/compra1.jpeg" alt="">
+                        <img src="/img/producto1.jpg" alt="">
                         <p>nombre del producto/color/talle</p>
                     </div>
                     <h4>Cantidad</h4>
@@ -37,7 +37,7 @@
                 <article>
                     <h4>Producto</h4>
                     <div class="img-detalles">
-                        <img src="/img/compra2.jpeg" alt="">
+                        <img src="/img/producto2.jpeg" alt="">
                         <p>nombre del producto/color/talle</p>
                     </div>
                     <h4>Cantidad</h4>
