--- a/site/public/css/index.css
+++ b/site/public/css/index.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     background-color: var(--color-1);
     margin: 0px;
+    font-family: "Poppins";
 }
 
 /* SLIDER */
