--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -11,16 +11,16 @@
     <section class="container-slider">
         <div class="slider" id="slider">
             <div class="slider__section">
-                <img src="/img/diablilloModelo2.jpeg" alt="" class="slider__img">
+                <img src="/img/banner2.jpg" alt="" class="slider__img">
             </div>
             <div class="slider__section">
-                <img src="/img/diablillo2Modelo2.jpeg" alt="" class="slider__img">
+                <img src="/img/banner1.jpg" alt="" class="slider__img">
             </div>
             <div class="slider__section">
-                <img id="img3" src="/img/diablilloModelo1.jpeg" alt="" class="slider__img">
+                <img id="img3" src="/img/banner2.jpg" alt="" class="slider__img">
             </div>
             <div class="slider__section">
-                <img src="/img/diablillo2Modelo1.jpeg" alt="" class="slider__img">
+                <img src="/img/banner1.jpg" alt="" class="slider__img">
             </div>
         </div>
         <span class="slider__btn slider__btn--left" id="btn-left"><i class="fas fa-chevron-left"></i></span>
@@ -30,18 +30,18 @@
     <section class="products">
     <article class="products1">
     <div class="image">
-            <img src="/img/remeraEspadaPirata.jpeg" alt="">
+            <img src="/img/producto1.jpg" alt="">
     </div>
     <div>
-            <img src="/img/remeraPokemon2.jpeg" alt="">
+            <img src="/img/producto2.jpeg" alt="">
     </div>
     </article>
     <article class="products2">
     <div>
-            <img src="/img/remeraPokemon3.jpeg" alt="">
+            <img src="/img/producto3.jpeg" alt="">
     </div>
     <div>
-            <img src="/img/remeraPokemon.jpeg" alt="">
+            <img src="/img/producto4.jpeg" alt="">
     </div>
     </article>
     </section>
@@ -68,22 +68,22 @@
     <section class="catalogo-productos">
         <article class="producto1">
             <div>
-                <img src="/img/camperonblue.jpeg" alt="">
+                <img src="/img/producto1.jpg" alt="">
             </div>
         </article>
         <article class="producto2">
             <div>
-                <img src="/img/remeraDiablillo.jpg" alt="">
+                <img src="/img/producto2.jpeg" alt="">
             </div>
         </article>
         <article class="producto3">
             <div>
-                <img src="/img/camperonRed.jpeg" alt="">
+                <img src="/img/producto3.jpeg" alt="">
             </div>
         </article>
         <article class="producto4">
             <div>
-                <img src="/img/remeraDiablillo2.jpg" alt="">
+                <img src="/img/producto4.jpeg" alt="">
             </div>
         </article>
     </section>
