--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -15,6 +15,7 @@
                 <li><a href="/products/detail/1">Categorias</a></li>
                 <li><a href="/users/login">Ofertas</a></li>
                 <li><a href="/users/register">Contacto</a></li>
+                <li><a href="/admin">Administracion</a></li>
             </ol>
         </nav>
         <div class="botones">
