--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -8,4 +8,5 @@
 @import url("productEdit.css");
 @import url("register.css");
 @import url("login.css");
+@import url("admin.css");
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
