--- a/site/public/css/header.css
+++ b/site/public/css/header.css
@@ -39,6 +39,10 @@ header article .botones div{
     padding: 2px 5px 2px 10px;
 }
 
+header article .botones a{
+    color: #fff;
+}
+
 .ol {
     margin: 0px;
     padding: 0px;
