--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -2,6 +2,7 @@
 @import url("header.css");
 @import url("footer.css");
 @import url("index.css");
+@import url("products.css");
 @import url("productDetail.css");
 @import url("productCart.css");
 @import url("productAdd.css");
