--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -11,25 +11,31 @@
         </div>
         <nav>
             <ol class="ol">
-                <li><a href="/products/cart">Productos</a></li>
-                <li><a href="/products/detail/1">Categorias</a></li>
+                <li><a href="/products">Productos</a></li>
+                <li><a href="/products">Categorias</a></li>
                 <li><a href="/users/login">Ofertas</a></li>
-                <li><a href="/users/register">Contacto</a></li>
+                <li><a href="#footer">Contacto</a></li>
                 <li><a href="/admin">Administracion</a></li>
             </ol>
         </nav>
         <div class="botones">
             <div>
                 <div class="barra-de-busqueda">
-                    <form action=""><input type="text" placeholder="Buscar productos"></form>
+                    <form action="">
+                        <input type="text" placeholder="Buscar productos">
+                    </form>
                 </div>
                 <i class="fas fa-search"></i>
             </div>
             <div>
-                <i class="fas fa-user"></i>
+                <a href="/users/register">
+                    <i class="fas fa-user"></i>
+                </a>
             </div>
             <div>
-                <i class="fas fa-shopping-bag"></i>
+                <a href="/products/cart">
+                    <i class="fas fa-shopping-bag"></i>
+                </a>
             </div>
         </div>
     </article>
