correccion de slider/carrusel y linkeo de vistas a productDetail

--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -26,22 +26,30 @@
         <span class="slider__btn slider__btn--left" id="btn-left"><i class="fas fa-chevron-left"></i></span>
         <span class="slider__btn slider__btn--right" id="btn-right"><i class="fas fa-chevron-right"></i></span>
     </section>
-    <script src="/js/slider.js"></script>
+    <script src="/javascripts/slider.js"></script>
     <section class="products">
     <article class="products1">
     <div class="image">
-            <img src="/img/producto1.jpg" alt="">
+        <a href="/products/detail/1">
+             <img src="/img/producto1.jpg" alt="">
+        </a>
     </div>
     <div>
+        <a href="/products/detail/2">
             <img src="/img/producto2.jpeg" alt="">
+       </a>
     </div>
     </article>
     <article class="products2">
     <div>
+        <a href="/products/detail/3">
             <img src="/img/producto3.jpeg" alt="">
+       </a>
     </div>
     <div>
+        <a href="/products/detail/4">
             <img src="/img/producto4.jpeg" alt="">
+       </a>
     </div>
     </article>
     </section>
@@ -68,22 +76,30 @@
     <section class="catalogo-productos">
         <article class="producto1">
             <div>
-                <img src="/img/producto1.jpg" alt="">
+                <a href="/products/detail/1">
+                    <img src="/img/producto1.jpg" alt="">
+               </a>
             </div>
         </article>
         <article class="producto2">
             <div>
-                <img src="/img/producto2.jpeg" alt="">
+                <a href="/products/detail/2">
+                    <img src="/img/producto2.jpeg" alt="">
+               </a>
             </div>
         </article>
         <article class="producto3">
             <div>
-                <img src="/img/producto3.jpeg" alt="">
+                <a href="/products/detail/3">
+                    <img src="/img/producto3.jpeg" alt="">
+               </a>
             </div>
         </article>
         <article class="producto4">
             <div>
-                <img src="/img/producto4.jpeg" alt="">
+                <a href="/products/detail/4">
+                    <img src="/img/producto4.jpeg" alt="">
+               </a>
             </div>
         </article>
     </section>
