--- a/site/src/views/admin.ejs
+++ b/site/src/views/admin.ejs
@@ -9,7 +9,7 @@
         <%- include('./partials/header') %>
     </header>
     <main>
-        <h2>Poductos</h2>
+        <h2>Productos</h2>
         <button class="add">
             <a href="/products/add">Crear Nuevo Producto</a>
         </button>
