cambio de nombre proyecto

--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -61,7 +61,7 @@
     </section>
     <section class="mid-banner">
             <img src="/img/mid-banner-agvsha.jpeg" alt="">
-            <h1 class="md-name">AGVSHAINK</h1>
+            <h1 class="md-name">Seven Store</h1>
     </section>
     <div class="box-linea2">
         <hr class="linea2">
