--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -5,7 +5,7 @@
                 <i class="fas fa-bars"></i>
             </div>
             <a href="/" style="text-decoration: none;">
-                <h1>AGVSHAINK</h1>
+                <h1>Seven Store</h1>
             </a>
             <img src="" alt="">
         </div>
