--- a/site/src/views/partials/footer.ejs
+++ b/site/src/views/partials/footer.ejs
@@ -18,6 +18,6 @@
             <p>Whatsapp</p>
         </section>
     </div>
-    <h5>AGVSHAINK@gmail.com</h5>
+    <h5>sevenStore@gmail.com</h5>
     <p class="copyright">copyright</p>
 </footer>
